# sssom-validate-ui

./: .cruft.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
docs/: conf.py  index.rst
src/: __init__.py
src/sssom_validate_ui/: __init__.py  app.py  cli.py  utils.py
tests/: __init__.py  demo_test.py
tests/data/: test1.sssom.tsv
