[tool.poetry]
name = "sssom-validate-ui"
version = "0.0.0"
description = "sssom-validate-ui"
authors = ["Nicolas Matentzoglu <nicolas.matentzoglu@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "*"
importlib-metadata = "^4.8.0"
streamlit = "^1.23.1"
sssom = ">=0.4.15"
#sssom = {path = "../sssom-py", develop = true}
tsvalid = ">=0.0.5"
#tsvalid = {path = "../tsvalid", develop = true}
tabulate = ">=0.8.9"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.1.2"}
tox = {version = ">=3.25.1"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = {version = ">=6.1.3"}
sphinx-rtd-theme = {version = ">=1.0.0"}
sphinx-autodoc-typehints = {version = ">=1.2.0"}
sphinx-click = {version = ">=4.3.0"}
myst-parser = {version = ">=0.18.1"}

[tool.poetry.scripts]
sssom-validate-ui = "sssom_validate_ui.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
